--- a/js-numerals/html/index.html
+++ b/js-numerals/html/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap" rel="stylesheet">
     <!-- <script>var exports = {}; var module = {}</script> -->
+    <script src="../helpers.js"></script>
     <script src="../globals.js"></script>
     <script src="../solution.js"></script>
 </head>
