--- a/js-numerals/html/index.html
+++ b/js-numerals/html/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number To Words</title>
+    <title>Numbers To Words</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,39 +18,30 @@
 </head>
 
 <body>
+    <div class="secondary-bg"></div>
     <main>
-        <section class="text">
-            <h1>Numbers To Word Converter</h1>
-            <p>write a number to convert it into a phrase.</p>
-            
-            <p>Number limitations:</p>
-            <ul>
-                <li>Number between 1 to 72 digits</li>
-                <li>Decimals are allowed</li>
-                <li>Negative numbers are allowed</li>
-            </ul>
+        <nav>
+            <h1>Numbers To Words <br> Converter 🙌
+            </h1>
+        </nav>
+        <section class="input-area">
+            <h3>Numbers To Word Converter</h3>
+            <input placeholder="Number (Decimal / Negative) and up to 72 digits" />
         </section>
-
         <section class="solution">
-            <input placeholder="Number" />
-            <p class="output">Number To Word Converter</p>
+            <h3>Answer will appear here</h3>
+            <div id="solution" class="solution__box">
+                ...
+            </div>
         </section>
-
-
     </main>
-
-
-    <div class="background-wrapper">
-        <div class="background-wrapper__overlay"></div>
-        <img class="background-wrapper__img" src="../assets/bg.jpg" alt="">
-    </div>
 </body>
 
 <script>
-    let answerParagraph = document.querySelector('#answer');
+    let answerParagraph = document.querySelector('#solution');
     document.querySelector('input').addEventListener('input', function (e) {
         const inputText = e.target.value;
-        answerParagraph.textContent = inputText.length ? numberToWords(inputText) : "";
+        answerParagraph.textContent = inputText.length ? numberToWords(inputText) : "...";
     })
 </script>
 
