styling and changing text

--- a/js-numerals/html/index.html
+++ b/js-numerals/html/index.html
@@ -25,7 +25,7 @@
             </h1>
         </nav>
         <section class="input-area">
-            <h3>Numbers To Word Converter</h3>
+            <h3>Numbers Input</h3>
             <input placeholder="Number (Decimal / Negative) and up to 72 digits" />
         </section>
         <section class="solution">
